@@ -73,9 +73,9 @@ void printDifxPulsar(const DifxPulsar *dp)
 	printf("  Difx Pulsar : %p\n", dp);
 	if(dp)
 	{
-		printf("    Filename : %s\n", dp->fileName);
-		printf("    Number of bins : %d\n", dp->nBin);
-		printf("    Scrunch : %d\n", dp->scrunch);
+		printf("    Filename = %s\n", dp->fileName);
+		printf("    Number of bins = %d\n", dp->nBin);
+		printf("    Scrunch = %d\n", dp->scrunch);
 		printf("    Number of polycos : %d\n", dp->nPolyco);
 		printDifxPolycoArray(dp->polyco, dp->nPolyco);
 	}
